[tool.poetry]
name = "ringer"
version = "0.1.0"
description = ""
authors = ["Jon Morgan <morgan.jon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ring-doorbell = "^0.6.1"
oauthlib = "^3.1.0"
pip = "^20.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
